maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:4: error: not found: value estFaceMur
    case 1 && !estFaceMur() => avance()
               ^